# llm-project

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sythetic_data_gen.py
dataanalyzer/: CLAUDE.md  PLAN.md  README.md  __main__.py  analyze.py
database/: schema.sql  seed.sql
datagen/: CLAUDE.md  README.md  config.py  dataset_version_history.md  eval_strategy_comparison.md  generate_batch.py  generate_gold_batch.py  parse.py  preprocess.py  prompts.py  push_to_hub.py  render_txt.py  retrieve_batch.py  retry_failed_batch.py  run_generate.sh  run_generate_eval.sh  strip_search_pagination.py  submit_batch.py  tool_specs.py
datagenerator/: ARCHITECTURE.md  README.md  __init__.py  _extractor.py  client.py  config.py  pipeline.py  renderer.py  tool_executor.py
datavalidator/: CLAUDE.md  README.md  utils.py  validate.py
docs/: CLAUDE.md  api_functions.md  commit_message_convention.md  custom_functions.py  data_change_log.md  database_schema.md  eval_metric_report.md  eval_plan.md  eval_strategy_comparison.md  functioncalling_sections.py  generated_data_validator_plan.md  metabase.md  metric_issue_resolution_workflow.md  project_structure.md  result_report.md
dummy_data/: __init__.py  dummy_call_spec.py  dummy_noise_senarios.py  dummy_return_spec.py  dummy_sppr_senarios.py  dummy_unsppr_senarios.py
eval/: eval_plan.md
eval_data/: dataset.jsonl
evaluations/: CLAUDE.md  README.md  __init__.py  api_runner.py  convert_readable.py  metrics.py  multi_turn_metrics.py  preprocessing.py  runner.py  scorer.py  turn_splitter.py
(+194 files in other folders)
