[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.34.2",
    "datasets==3.0.1",
    "ipykernel>=7.2.0",
    "openai>=2.21.0",
    "pandas>=2.3.3",
    "peft==0.13.0",
    "setuptools>=82.0.0",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "tqdm>=4.67.3",
    "transformers==4.45.1",
    "trl==0.11.1",
    "vllm>=0.6.3",
]
